[package]
name = "rocket_auth"
version = "0.4.0"
authors = ["tvallotton@uc.cl"]
edition = "2021"
license = "MIT or Apache-2.0"
description = "A high level authentication management library for Rocket applications. It supports both SQLite and Postgres."
repository = "https://github.com/tvallotton/rocket_auth"

readme = "README.md"
categories = ["web-programming"]
keywords = ["rocket", "users", "authentication", "auth", "session"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true


[features]
sqlx-sqlite = ["sqlx/sqlite"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql"]


[dependencies.rusqlite]
version = "0.30.0"
optional = true


[dependencies]
rand = "0.8.5"
rust-argon2 = "2.1.0"
lazy_static = "1.4.0"
regex = "1.10.3"
serde_json = "1.0.114"
chashmap = "2.2.2"
thiserror = "1.0.57"
async-trait = "0.1.77"
fehler = "1.0.0"
chrono = "0.4.35"
validator = { version = "0.17.0", features = ["derive"] }
futures= "0.3.30"


[dependencies.sqlx]
version = "0.7.4"
optional = true


[dependencies.rocket]
version = "0.5.0"
features = ["secrets"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio-postgres]
version = "0.7.10"
optional = true


[dependencies.redis]
version = "0.25.0"
features = ["aio", "tokio-comp"]
optional = true

[dependencies.tokio]
version = "1.36.0"
features = ["rt", "rt-multi-thread"]

[dev-dependencies]
tokio-postgres= "0.7.10"


[dev-dependencies.rocket]
version = "0.5.0"
features = ["secrets", "json"]

[dev-dependencies.redis]
version = "0.25.0"
features = ["aio", "tokio-comp"]


[dev-dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]


[dev-dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio-rustls"]

[dev-dependencies.rocket_auth]
path = "../rocket_auth"
features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "redis",
    "tokio-postgres",
    "rusqlite",
]
